fix: Move contact us icon to footer to create more space in header on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -302,10 +302,10 @@ input[name='q']::placeholder {
 /* pad the top when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 116px;
+        padding-top: 130px;
     }
 
     body {
-        height: calc(100vh - 116px);
+        height: calc(100vh - 130px);
     }
 }
